--- a/calculator.css
+++ b/calculator.css
@@ -2,8 +2,18 @@
   max-width: 400px;
   margin: 10vh auto 0 auto;
   box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
-  border-radius: 1em;
+  border-radius: 5px;
   background-color: cyan;
+  border-top: 2px solid #999;
+  border-left: 2px solid #999;
+  border-right: 2px solid #999;
+  border-bottom: 2px solid #999;
+}
+
+body {
+  margin: 0px;
+  padding: 0px;
+  background-color: aquamarine;
 }
 
 #display {
@@ -12,9 +22,6 @@
   line-height: 70px;
   padding: 16px 8px;
   font-size: 25px;
-  border-top: 2px solid #999;
-  border-left: 2px solid #999;
-  border-right: 2px solid #999;
   border-bottom: 2px solid #999;
   background-color: cyan;
   border-radius: 5px;
@@ -36,12 +43,12 @@
 }
 
 .button {
-  border: 0.5px solid #999;
+  border: 1px solid #999;
   line-height: 100px;
   text-align: center;
   font-size: 25px;
   cursor: pointer;
-  border: 5px;
+  border-radius: 5px;
 }
 
 #equal {
