--- a/calculator.css
+++ b/calculator.css
@@ -64,3 +64,19 @@ body {
   transition: 0.5s ease-in-out;
   border-radius: 5px;
 }
+
+ @media screen and (max-width: 1110px) {
+ 
+}
+
+@media screen and (max-width: 910px) {
+ 
+}
+
+@media screen and (max-width: 810px) {
+ 
+}
+
+@media screen and (max-width: 375px) {
+ 
+} 
