--- a/calculator.css
+++ b/calculator.css
@@ -1,13 +1,13 @@
 .container {
   max-width: 400px;
   margin: 10vh auto 0 auto;
-  box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
+  box-shadow: 0px 0px 43px 17px aquamarine;
   border-radius: 5px;
-  background-color: cyan;
-  border-top: 2px solid #999;
-  border-left: 2px solid #999;
-  border-right: 2px solid #999;
-  border-bottom: 2px solid #999;
+  background-color: aquamarine;
+  border-top: 2px solid aquamarine;
+  border-left: 2px solid aquamarine;
+  border-right: 2px solid aquamarine;
+  border-bottom: 2px solid aquamarine;
 }
 
 body {
@@ -31,6 +31,7 @@ body {
   display: grid;
   border-bottom: 1px solid #999;
   border-left: 1px solid #999;
+  border-right: 1px solid #999;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   background-color: aquamarine;
   border-radius: 5px;
@@ -65,18 +66,14 @@ body {
   border-radius: 5px;
 }
 
- @media screen and (max-width: 1110px) {
- 
+@media screen and (max-width: 1110px) {
 }
 
 @media screen and (max-width: 910px) {
- 
 }
 
 @media screen and (max-width: 810px) {
- 
 }
 
 @media screen and (max-width: 375px) {
- 
-} 
+}
