--- a/calculator.css
+++ b/calculator.css
@@ -22,8 +22,11 @@ body {
   line-height: 70px;
   padding: 16px 8px;
   font-size: 25px;
+  border-top: 2px solid #999;
+  border-left: 2px solid #999;
+  border-right: 2px solid #999;
   border-bottom: 2px solid #999;
-  background-color: cyan;
+  background-color: aquamarine;
   border-radius: 5px;
 }
 
@@ -64,16 +67,4 @@ body {
   color: red;
   transition: 0.5s ease-in-out;
   border-radius: 5px;
-}
-
-@media screen and (max-width: 1110px) {
-}
-
-@media screen and (max-width: 910px) {
-}
-
-@media screen and (max-width: 810px) {
-}
-
-@media screen and (max-width: 375px) {
 }
