--- a/calculator.css
+++ b/calculator.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 400px;
   margin: 10vh auto 0 auto;
-  box-shadow: 0px 0px 43px 17px aquamarine;
+  box-shadow: 0px 0px 43px 17px rgb(245, 247, 246);
   border-radius: 5px;
   background-color: aquamarine;
   border-top: 2px solid aquamarine;
@@ -13,7 +13,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: aquamarine;
+  background-color: whitesmoke;
 }
 
 #display {
